// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadableContent should render spinner after timeout 1`] = `
<LoadingSpinner
  size="fullscreen"
/>
`;

exports[`LoadableContent should render with minimum props 1`] = `
<div>
  <div
    id="jest"
  >
    jest test
  </div>
</div>
`;

exports[`Loading should render 1`] = `
<div>
  <div
    class="loader loader--fullscreen  mko_zz2xb6-loader  mko_zz2xb6-loader--fullscreen"
  >
    <svg
      class="loader__circular  mko_zz2xb6-circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="loader__path  mko_zz2xb6-path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Loading should render error message 1`] = `
<div>
  <div>
    An Error was encountered loading the page!
  </div>
</div>
`;

exports[`Loading should render timeout message 1`] = `
<div>
  <div>
    The request has timed out!
  </div>
</div>
`;

exports[`LoadingBouncer should render with minimum props 1`] = `
<div>
  <div
    class="loading-bouncer  mko_flo780-bouncer"
  >
    <div
      class="loading-bouncer__orb  mko_flo780-orb"
    />
    <div
      class="loading-bouncer__orb  mko_flo780-orb"
    />
    <div
      class="loading-bouncer__orb  mko_flo780-orb"
    />
  </div>
</div>
`;

exports[`LoadingSpinner should render with minimum props 1`] = `
<div>
  <div
    class="loader  mko_zz2xb6-loader"
  >
    <svg
      class="loader__circular  mko_zz2xb6-circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="loader__path  mko_zz2xb6-path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleLoading should render 1`] = `
<div>
  <div
    class="loading-bouncer  mko_flo780-bouncer"
  >
    <div
      class="loading-bouncer__orb  mko_flo780-orb"
    />
    <div
      class="loading-bouncer__orb  mko_flo780-orb"
    />
    <div
      class="loading-bouncer__orb  mko_flo780-orb"
    />
  </div>
</div>
`;
